# ADELE

./: .gitignore  DB_Readme  README.md  index.html  package-lock.json  package.json  tailwind.css-data.json  tsconfig.json  tsconfig.node.json  vite-env.d.ts  vite.config.ts
src/: App.tsx  initTray.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/components/: CargillCircle.tsx  CentralCommandPopup.tsx  ChatFullView.tsx  ChatPanel.tsx  Toggles.tsx
src/context/: AppStateContext.tsx  ThemeContext.tsx
src/styles/: theme.css
