[package]
name = "adele-shell"
version = "0.1.0"
description = "ADELE Desktop Shell"
edition = "2021"

[lib]
name = "adele_shell_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
